src/graphreveal/translator/generated/QueryParser.py
# Generated from QueryParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class QueryParser ( Parser ):

    grammarFileName = "QueryParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'|'", "'('", "')'", "<INVALID>", "'<'", "'>'", "'<='", 
                     "'>='", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'bipartite'", "'complete'", 
                     "'connected'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'planar'", "'regular'", "'tree'" ]

    symbolicNames = [ "<INVALID>", "WHITESPACE", "INTEGER", "AND", "OR", 
                      "LPAREN", "RPAREN", "NOT", "LESS", "GREATER", "LESS_OR_EQUAL", 
                      "GREATER_OR_EQUAL", "RANGE_OPERATOR", "VERTEX", "EDGE", 
                      "BLOCK", "COMPONENT", "ACYCLIC", "BIPARTITE", "COMPLETE", 
                      "CONNECTED", "CUBIC", "EULERIAN", "HAMILTONIAN", "NO_ISOLATED_V", 
                      "PLANAR", "REGULAR", "TREE" ]

    RULE_query = 0
    RULE_orExpr = 1
    RULE_andExpr = 2
    RULE_expr = 3
    RULE_entityProperty = 4
    RULE_entity = 5
    RULE_boolProperty = 6

    ruleNames =  [ "query", "orExpr", "andExpr", "expr", "entityProperty", 
                   "entity", "boolProperty" ]

    EOF = Token.EOF
    WHITESPACE=1
    INTEGER=2
    AND=3
    OR=4
    LPAREN=5
    RPAREN=6
    NOT=7
    LESS=8
    GREATER=9
    LESS_OR_EQUAL=10
    GREATER_OR_EQUAL=11
    RANGE_OPERATOR=12
    VERTEX=13
    EDGE=14
    BLOCK=15
    COMPONENT=16
    ACYCLIC=17
    BIPARTITE=18
    COMPLETE=19
    CONNECTED=20
    CUBIC=21
    EULERIAN=22
    HAMILTONIAN=23
    NO_ISOLATED_V=24
    PLANAR=25
    REGULAR=26
    TREE=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orExpr(self):
            return self.getTypedRuleContext(QueryParser.OrExprContext,0)


        def EOF(self):
            return self.getToken(QueryParser.EOF, 0)

        def getRuleIndex(self):
            return QueryParser.RULE_query

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = QueryParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 14
            self.orExpr()
            self.state = 15
            self.match(QueryParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.AndExprContext)
            else:
                return self.getTypedRuleContext(QueryParser.AndExprContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(QueryParser.OR)
            else:
                return self.getToken(QueryParser.OR, i)

        def getRuleIndex(self):
            return QueryParser.RULE_orExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpr" ):
                return visitor.visitOrExpr(self)
            else:
                return visitor.visitChildren(self)




    def orExpr(self):

        localctx = QueryParser.OrExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_orExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self.andExpr()
            self.state = 22
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 18
                self.match(QueryParser.OR)
                self.state = 19
                self.andExpr()
                self.state = 24
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AndExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.ExprContext)
            else:
                return self.getTypedRuleContext(QueryParser.ExprContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(QueryParser.AND)
            else:
                return self.getToken(QueryParser.AND, i)

        def getRuleIndex(self):
            return QueryParser.RULE_andExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpr" ):
                return visitor.visitAndExpr(self)
            else:
                return visitor.visitChildren(self)




    def andExpr(self):

        localctx = QueryParser.AndExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_andExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self.expr()
            self.state = 30
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 26
                self.match(QueryParser.AND)
                self.state = 27
                self.expr()
                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return QueryParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SimpleExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QueryParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def entityProperty(self):
            return self.getTypedRuleContext(QueryParser.EntityPropertyContext,0)

        def boolProperty(self):
            return self.getTypedRuleContext(QueryParser.BoolPropertyContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleExpr" ):
                return visitor.visitSimpleExpr(self)
            else:
                return visitor.visitChildren(self)


    class NotExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QueryParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(QueryParser.NOT, 0)
        def entityProperty(self):
            return self.getTypedRuleContext(QueryParser.EntityPropertyContext,0)

        def boolProperty(self):
            return self.getTypedRuleContext(QueryParser.BoolPropertyContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotExpr" ):
                return visitor.visitNotExpr(self)
            else:
                return visitor.visitChildren(self)


    class ParenExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QueryParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(QueryParser.LPAREN, 0)
        def orExpr(self):
            return self.getTypedRuleContext(QueryParser.OrExprContext,0)

        def RPAREN(self):
            return self.getToken(QueryParser.RPAREN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenExpr" ):
                return visitor.visitParenExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self):

        localctx = QueryParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        try:
            self.state = 43
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = QueryParser.SimpleExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.entityProperty()
                pass

            elif la_ == 2:
                localctx = QueryParser.SimpleExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.boolProperty()
                pass

            elif la_ == 3:
                localctx = QueryParser.NotExprContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 35
                self.match(QueryParser.NOT)
                self.state = 36
                self.entityProperty()
                pass

            elif la_ == 4:
                localctx = QueryParser.NotExprContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 37
                self.match(QueryParser.NOT)
                self.state = 38
                self.boolProperty()
                pass

            elif la_ == 5:
                localctx = QueryParser.ParenExprContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 39
                self.match(QueryParser.LPAREN)
                self.state = 40
                self.orExpr()
                self.state = 41
                self.match(QueryParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityPropertyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return QueryParser.RULE_entityProperty

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NumEntityPropertyContext(EntityPropertyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QueryParser.EntityPropertyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(QueryParser.INTEGER, 0)
        def entity(self):
            return self.getTypedRuleContext(QueryParser.EntityContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumEntityProperty" ):
                return visitor.visitNumEntityProperty(self)
            else:
                return visitor.visitChildren(self)


    class HalfOpenRangeContext(EntityPropertyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QueryParser.EntityPropertyContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(QueryParser.INTEGER, 0)
        def entity(self):
            return self.getTypedRuleContext(QueryParser.EntityContext,0)

        def LESS(self):
            return self.getToken(QueryParser.LESS, 0)
        def GREATER(self):
            return self.getToken(QueryParser.GREATER, 0)
        def LESS_OR_EQUAL(self):
            return self.getToken(QueryParser.LESS_OR_EQUAL, 0)
        def GREATER_OR_EQUAL(self):
            return self.getToken(QueryParser.GREATER_OR_EQUAL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHalfOpenRange" ):
                return visitor.visitHalfOpenRange(self)
            else:
                return visitor.visitChildren(self)


    class ClosedRangeContext(EntityPropertyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QueryParser.EntityPropertyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(QueryParser.INTEGER)
            else:
                return self.getToken(QueryParser.INTEGER, i)
        def RANGE_OPERATOR(self):
            return self.getToken(QueryParser.RANGE_OPERATOR, 0)
        def entity(self):
            return self.getTypedRuleContext(QueryParser.EntityContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClosedRange" ):
                return visitor.visitClosedRange(self)
            else:
                return visitor.visitChildren(self)



    def entityProperty(self):

        localctx = QueryParser.EntityPropertyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_entityProperty)
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = QueryParser.NumEntityPropertyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.match(QueryParser.INTEGER)
                self.state = 46
                self.entity()
                pass

            elif la_ == 2:
                localctx = QueryParser.HalfOpenRangeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                localctx.op = self.match(QueryParser.LESS)
                self.state = 48
                self.match(QueryParser.INTEGER)
                self.state = 49
                self.entity()
                pass

            elif la_ == 3:
                localctx = QueryParser.HalfOpenRangeContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                localctx.op = self.match(QueryParser.GREATER)
                self.state = 51
                self.match(QueryParser.INTEGER)
                self.state = 52
                self.entity()
                pass

            elif la_ == 4:
                localctx = QueryParser.HalfOpenRangeContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 53
                localctx.op = self.match(QueryParser.LESS_OR_EQUAL)
                self.state = 54
                self.match(QueryParser.INTEGER)
                self.state = 55
                self.entity()
                pass

            elif la_ == 5:
                localctx = QueryParser.HalfOpenRangeContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                localctx.op = self.match(QueryParser.GREATER_OR_EQUAL)
                self.state = 57
                self.match(QueryParser.INTEGER)
                self.state = 58
                self.entity()
                pass

            elif la_ == 6:
                localctx = QueryParser.ClosedRangeContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 59
                self.match(QueryParser.INTEGER)
                self.state = 60
                self.match(QueryParser.RANGE_OPERATOR)
                self.state = 61
                self.match(QueryParser.INTEGER)
                self.state = 62
                self.entity()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERTEX(self):
            return self.getToken(QueryParser.VERTEX, 0)

        def EDGE(self):
            return self.getToken(QueryParser.EDGE, 0)

        def BLOCK(self):
            return self.getToken(QueryParser.BLOCK, 0)

        def COMPONENT(self):
            return self.getToken(QueryParser.COMPONENT, 0)

        def getRuleIndex(self):
            return QueryParser.RULE_entity

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntity" ):
                return visitor.visitEntity(self)
            else:
                return visitor.visitChildren(self)




    def entity(self):

        localctx = QueryParser.EntityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_entity)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 122880) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolPropertyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ACYCLIC(self):
            return self.getToken(QueryParser.ACYCLIC, 0)

        def BIPARTITE(self):
            return self.getToken(QueryParser.BIPARTITE, 0)

        def COMPLETE(self):
            return self.getToken(QueryParser.COMPLETE, 0)

        def CONNECTED(self):
            return self.getToken(QueryParser.CONNECTED, 0)

        def CUBIC(self):
            return self.getToken(QueryParser.CUBIC, 0)

        def EULERIAN(self):
            return self.getToken(QueryParser.EULERIAN, 0)

        def HAMILTONIAN(self):
            return self.getToken(QueryParser.HAMILTONIAN, 0)

        def NO_ISOLATED_V(self):
            return self.getToken(QueryParser.NO_ISOLATED_V, 0)

        def PLANAR(self):
            return self.getToken(QueryParser.PLANAR, 0)

        def REGULAR(self):
            return self.getToken(QueryParser.REGULAR, 0)

        def TREE(self):
            return self.getToken(QueryParser.TREE, 0)

        def getRuleIndex(self):
            return QueryParser.RULE_boolProperty

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolProperty" ):
                return visitor.visitBoolProperty(self)
            else:
                return visitor.visitChildren(self)




    def boolProperty(self):

        localctx = QueryParser.BoolPropertyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_boolProperty)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 268304384) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





